# monorepo-snapshot

./: .env.example  .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml
apps/api/: Cargo.toml
apps/api/src/: auth_keys.rs  fluid_bridge.rs  m3_orders.rs  m4_views.rs  main.rs  perf_metrics.rs  projection_sql.rs  public_cache.rs  wal_projector.rs
apps/assets/: Cargo.toml
apps/assets/src/: main.rs
apps/clearing/: Cargo.toml  build.rs
apps/clearing/src/: main.rs
apps/indexer/: Cargo.toml
apps/indexer/src/: main.rs
apps/treasury/: Cargo.toml
apps/treasury/src/: main.rs
apps/web/: package.json
apps/web/src/: index.css  main.tsx  router.tsx
apps/web/src/app/: guards.tsx  layout.tsx  router-pages.tsx  session-context.ts  session-provider.tsx  session-utils.ts  session.ts
apps/web/src/components/ui/: accordion.tsx  breadcrumb.tsx  calendar.tsx  carousel.tsx  chart.tsx  combobox.tsx  command.tsx  context-menu.tsx  dropdown-menu.tsx  input-otp.tsx  menubar.tsx  navigation-menu.tsx  pagination.tsx  radio-group.tsx  select.tsx  sheet.tsx  sidebar.tsx
apps/web/src/features/admin/: market-image-cropper.tsx  page.tsx
apps/web/src/features/auth/: wallet-panel.tsx
apps/web/src/features/barebone/: landing-page.tsx  pages.tsx
apps/web/src/features/discovery/: page.tsx
apps/web/src/features/discovery/components/: market-card.tsx
apps/web/src/features/landing/: page.tsx
apps/web/src/features/portfolio/: page.tsx
apps/web/src/features/trading/: page.tsx
apps/web/src/lib/: api.ts  assets.ts  market-status.ts  retry.ts
contracts/: README.md  multi-package.yaml
contracts/pebble/: daml.yaml
contracts/pebble-scripts/: daml.yaml
contracts/pebble-scripts/daml/Pebble/: Scripts.daml
contracts/pebble-scripts/daml/Pebble/Scripts/: LiveBootstrap.daml  LiveFunding.daml  M1.daml  M2.daml  M2OffLedger.daml  M3.daml  M3E2E.daml  OneShotPolicy.daml
contracts/pebble/daml/Pebble/: Account.daml  Clearing.daml  Main.daml  MarketLifecycle.daml  Reference.daml  Treasury.daml  Types.daml
contracts/wizardcat-token-standard/: daml.yaml
contracts/wizardcat-token-standard/daml/Wizardcat/Token/: Standard.daml
crates/daml-grpc/: Cargo.toml  build.rs
crates/daml-grpc/src/: lib.rs
crates/fluid/: Cargo.toml
crates/fluid/src/: actor.rs  book.rs  engine.rs  error.rs  events.rs  ids.rs  lib.rs  replication.rs  risk.rs  transition.rs  wal.rs
crates/ids/: Cargo.toml
crates/ids/src/: lib.rs
crates/ledger-client/: Cargo.toml
crates/ledger-client/src/: lib.rs
crates/trading/: Cargo.toml
crates/trading/src/: domain.rs  lib.rs  matching.rs
infra/canton/: README.md
infra/docker/: Dockerfile.services  compose.db.yaml  compose.full.yaml  compose.ha.yaml  haproxy-ha.cfg
infra/sql/migrations/: 0001_init.sql  0002_markets.sql  0003_m1_core.sql  0004_m1_hardening.sql  0005_m2_token_and_treasury.sql  0006_m2_token_claims_and_wallets.sql  0007_m2_submission_path_watermarks.sql  0008_m2_treasury_offledger.sql  0009_ledger_offsets_bigint.sql  0010_m3_trading.sql  0011_m3_clearing_dry_run_status.sql  0012_m3_fill_sequence.sql  0013_m3_order_instrument_columns.sql  0014_m4_treasury_perf_hardening.sql  0015_m5_disclosure_audit.sql  0016_m5_market_metadata.sql  0017_m6_market_settlement.sql  0018_m6_position_terminalization.sql  0019_m6_market_instrument_and_payout_binding.sql  0020_m7_withdrawal_request_lifecycle.sql  0021_m7_account_liquidity_state.sql  0022_m7_withdrawal_create_intents.sql  0023_m7_account_writer_queue.sql  0024_m7_account_lock_capabilities.sql  0025_m7_operator_accept_policies.sql  0026_m7_withdrawal_reservation_releases.sql  0027_m3_market_orders.sql  0028_m3_reconcile_pending_trade_deltas.sql  0029_m3_matching_perf_hardening.sql  0030_m8_auth_key_store.sql  0031_m8_user_registrations.sql  0032_m9_market_metadata_images.sql  0033_m10_market_metadata_resolution_time.sql  0034_m10_market_fills_recent_index.sql  0035_m11_user_api_key_management.sql  0036_m11_user_api_key_management_followup.sql  0037_m12_google_oauth_sessions.sql  0038_m12_google_oauth_bootstrap_key_reveal.sql  0039_fluid_wal_projection_tracking.sql  0040_m3_fill_party_attribution.sql  (+2 more)
proto/google/rpc/: status.proto
