[package]
name = "pebble-assets"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = "0.7"
dotenvy = "0.15"
image = { version = "0.25", default-features = false, features = ["avif", "gif", "jpeg", "png", "webp"] }
lru = "0.12"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread", "signal", "sync"] }
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
webp = "0.3"
