[package]
name = "pebble-clearing"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
pebble-daml-grpc = { path = "../../crates/daml-grpc" }
pebble-ids = { path = "../../crates/ids" }
serde_json = "1"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "migrate", "chrono", "json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
tonic = "0.12"
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
